--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -10,12 +10,16 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="form-group">
-    <%= f.label :image %>
-    <%= f.file_field :image, class: "form-control" %>
+  
+  <div class="form-group text-center">
+    <%= f.file_field :image, class: "btn btn-default form-control"%>
   </div>
-
+  
+  <div class="form-group">
+    <%= f.label :website, class: "col-sm-3 col-form-label font-weight-bold" %>
+    <%= f.text_field :website, class: "form-control" %>
+  </div>
+        
   <div class="form-group">
     <%= f.label :description %>
     <%= f.text_field :description, class: "form-control" %>
