--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -3,19 +3,19 @@
 <div id="pins" class="transitions-enabled">
   <% @pins.each do |pin| %>
     <div class="box panel panel-default">
-      <%= link_to image_tag(pin.image.url(:medium)), pin %>
+      <%= link_to image_tag(pin.image.url(:large)), pin %>
       <div class="panel-body">
         <p><%= pin.description %></p>
-        <p><strong><%= pin.user.name if pin.user %></strong></p>
+        <!--<p><strong><= pin.user.name if pin.user %></strong></p>-->
         
         <% if current_user && pin.user == current_user %>
           <div class="actions">
             <%= link_to edit_pin_path(pin) do %>
-              <span class="glyphicon glyphicon-edit"></span>
+              <span class="fa fa-edit"></span>
               Edit
             <% end %>
             <%= link_to pin, method: :delete, data: { confirm: 'Are you sure?' } do %>
-              <span class="glyphicon glyphicon-trash"></span>
+              <span class="fa fa-trash"></span>
               Delete
             <% end %>
           </div>
