--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,21 +1,48 @@
 <%= link_to 'Back', pins_path %>
 
 <div class="row">
-	<div class="col-md-offset-2 col-md-8">
+	<div class="col-md-offset-3 col-md-6">
 		<div class="panel panel-default">
 		<div class="panel-heading center">
 			<%= image_tag @pin.image.url(:medium) %>
 		</div>
+		
 		<div class="panel-body">
-		<p><%= @pin.description %></p>
-		<p><strong><%= @pin.user.name if @pin.user %></strong></p>
+			<% if @pin.website? %>
+				<b>Website: <%= link_to @pin.website, "https://#{@pin.website}", target:"_blank" %></b>
+			<% end %>
+			
+			<p><%= @pin.description %></p>
 
-		<% if @pin.user == current_user %>
-			<%= link_to edit_pin_path(@pin) do %>
-        <span class="glyphicon glyphicon-edit"></span>
-        Edit
-      <% end %>
-		<% end %>
+			<% if @pin.user == current_user %>
+				<div class="action">
+		    	<%= link_to edit_pin_path(@pin) do %>
+		       <span class="fa fa-edit"></span> Edit
+	       <% end %>
+		      
+		      <%= link_to @pin, method: :delete, data: { confirm: 'Are you sure?' } do %>
+		        <span class="fa fa-trash"></span> Delete
+		      <% end %>
+		    </div>
+			<% end %>
+			<hr />
+      <% if user_signed_in? %>
+				<div class="comment-form">
+			  	<h3 class="action">Leave a Comment</h3>
+			  	<%= render 'comments/form' %>
+		    </div>	
+				<hr/>
+				
+				<div class="comment-count">
+		 	 		<span class="tag is-rounded"><%= @pin.comments.count %> comment(s)</span>
+		    </div><br />
+		    
+		    <section class="section comments">
+			  	<%= render @pin.comments %>
+				</section>
+			<% else %>
+         <p class="btn btn-default"><%= link_to "Sign Up", new_user_registration_path %></p>&nbsp;<p class="text-center"> or </p><p class="btn btn-default"><%= link_to "Log In", new_user_session_path %></p><p class="text-center">to leave an anonymous comment</p>
+			<% end %>
 		</div>
 	</div>
 
